Closed Bug 1337387 Opened 8 years ago Closed 8 years ago

Fix unified build bustage from merging m-c to graphics

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54

People

(Reporter: rhunt, Assigned: rhunt)

Details

Attachments

(1 file)

Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Attached patch unified.patchSplinter Review
Attachment #8834446 - Flags: review?(bugmail)
Comment on attachment 8834446 [details] [diff] [review] unified.patch Review of attachment 8834446 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/wr/WebRenderLayerManager.cpp @@ +5,5 @@ > > #include "WebRenderLayerManager.h" > > #include "apz/src/AsyncPanZoomController.h" > +#include "WebRenderLayersLogging.h" This is fine for now, but I suspect it will break again in the future. All it takes is any one file higher up in the unification hunk to include LayersLogging.h. If that happens we should probably fix this properly by moving the things in WebRenderLayersLogging.h into LayersLogging.h.
Attachment #8834446 - Flags: review?(bugmail) → review+
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: