Bug 1337387 - Fix unified build bustage r=kats?